# expired

./: .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  exceptions_handlers.py  main.py
backend/app/api/: router.py
backend/app/api/auth/: router.py  views.py
backend/app/api/users/: router.py
backend/app/constants/: __init__.py  auth.py  general.py
backend/app/dals/: __init__.py  user.py
backend/app/db/: __init__.py  session.py
backend/app/exceptions/: __init__.py  base.py  http.py
backend/app/firebase/: __init__.py  auth.py  init_app.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/repos/: __init__.py  base.py  user.py
backend/app/schemas/: __init__.py  auth.py  firebase.py  user.py
backend/app/services/: __init__.py  auth.py  users.py
backend/app/transactions/: __init__.py  auth.py
backend/migrations/: env.py
backend/migrations/versions/: 3cc0aa9f08fd_change_firebase_uid_of_users_to_char_.py  82c26f76d78a_add_firebase_uuid_and_password_to_users.py  baa4ee9d8adf_add_password_salt_to_users.py  bafad400c9ed_fix_default_in_firebase_uid_in_users.py  dd4432561444_init_users_table.py  ec006a6056e4_add_the_email_to_user.py  fbbf5ef9c46a_fix_problem_with_naming_in_users.py
backend/scripts/: lint.sh
backend/utils/exchange_custom_token/: README.md  main.js  package-lock.json  package.json
docker/: .gitignore
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: package-lock.json  package.json
frontend/src/: App.tsx  hooks.ts  (+1 more)
(+35 files in other folders)
